--- a/kodely/core/templates/login.html
+++ b/kodely/core/templates/login.html
@@ -108,7 +108,7 @@
     }
 
     auth.onAuthStateChanged((user) => {
-      if (user) {r
+      if (user) {
         console.log("Usuario autenticado:", user.displayName, user.email);
       } else {
         console.log("Usuario no autenticado");
