--- a/kodely/core/templates/home.html
+++ b/kodely/core/templates/home.html
@@ -8,18 +8,36 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="{% static 'css/dashboard.css' %}">
     <style>
-    body { font-family: sans-serif; padding: 20px; }
-    h2 { margin-bottom: 10px; }
-    ul { list-style: none; padding: 0; }
-    li { margin-bottom: 10px; }
-    a { text-decoration: none; color: #2b579a; }
-    a:hover { text-decoration: underline; }
-  </style>
+      body { font-family: sans-serif; padding: 20px; }
+      h2 { margin-bottom: 10px; }
+      ul { list-style: none; padding: 0; }
+      li { margin-bottom: 10px; }
+      a { text-decoration: none; color: #2b579a; }
+      a:hover { text-decoration: underline; }
+      .btn-login {
+        display: inline-block;
+          padding: 10px 20px;
+          background-color: #2b579a;
+          color: white;
+          border: none;
+          border-radius: 5px;
+          text-decoration: none;
+          cursor: pointer;
+        }
+        .btn-login:hover {
+          background-color: #20457a;
+        }
+    </style>
   </head>
   <body>
     <p>Ya estás logueado exitosamente</p>
-    <button id="logout-button">Cerrar sesión</button>
-
+    {% if request.user.is_authenticated %}
+    <button id="logout-button" class="btn btn-login">Cerrar sesión</button><br>
+    <span>Bienvenido, {{ request.user.name }}</span>
+    {% else %}
+    <a href="{% url 'login_page' %}" class="btn btn-login">Iniciar sesión</a>
+    {% endif %}
+    <h1>Bienvenido a Kodely</h1>
     <h2>Últimos posts</h2>
     <ul>
       {% for post in posts %}
