Boton de perfil ingreso

--- a/kodely/core/templates/home.html
+++ b/kodely/core/templates/home.html
@@ -12,6 +12,10 @@
   </style>
 </head>
 <body>
+  <div style="text-align: right;">
+  <a href="{% url 'perfil' %}" style="padding: 8px 16px; background-color: #2b579a; color: white; text-decoration: none; border-radius: 5px;">Mi Perfil</a>
+  </div>
+
   <p>Ya estás logueado exitosamente</p>
 
   <h2>Últimos posts</h2>
