Click en foto de perfil
Te lleva al perfil al hacer click en la foto

--- a/kodely/core/templates/ver_post.html
+++ b/kodely/core/templates/ver_post.html
@@ -80,7 +80,7 @@
 
   <div class="contenido" contenteditable="false">
     {% autoescape off %}
-    {{ post.content }}
+    {{ post.content|linebreaks }}
     {% endautoescape %}
   </div>
 
