--- a/kodely/core/templates/home.html
+++ b/kodely/core/templates/home.html
@@ -56,11 +56,12 @@
         <button id="logout-button" class="btn-login">Cerrar sesión</button>
         <a href="{% url 'crear_post' %}" class="btn-login">Crear Post</a>
         {% if request.user.photo_url %}
-        <img class="user_photo" src="{{ request.user.photo_url }}" alt="Foto de perfil" width="100">
+        <a href="{% url 'perfil' %}">
+          <img class="user_photo" src="{{ request.user.photo_url }}" alt="Foto de perfil" width="100">
+        </a>
         {% endif %}
         {% else %}
         <a href="{% url 'login_page' %}" class="btn-login">Iniciar Sesión</a>
-
         {% endif %}
       </div>
     </div>
