--- a/kodely/core/static/css/dashboard.css
+++ b/kodely/core/static/css/dashboard.css
@@ -1,4 +1,25 @@
-/* Reset básico */
+h2 {
+    margin-bottom: 10px;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+li {
+    margin-bottom: 10px;
+}
+
+a {
+    text-decoration: none;
+    color: #2b579a;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 body {
     background: #f5f5f5;
     font-family: 'Segoe UI', Arial, sans-serif;
@@ -6,7 +27,6 @@ body {
     padding: 0;
 }
 
-/* Header */
 .header {
     display: flex;
     align-items: center;
@@ -14,28 +34,9 @@ body {
     background: #fff;
     padding: 18px 32px;
     border-bottom: 2px solid #e0e0e0;
+    margin: 0%;
 }
 
-
-
-
-.search-bar input[type="text"] {
-    width: 350px;
-    padding: 8px 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px 0 0 4px;
-    outline: none;
-    font-size: 1rem;
-}
-
-.search-bar button {
-    padding: 8px 14px;
-    border: 1px solid #ccc;
-    border-left: none;
-    background: #fff;
-    border-radius: 0 4px 4px 0;
-    cursor: pointer;
-}
 
 .header-actions {
     display: flex;
@@ -45,20 +46,22 @@ body {
 
 .btn-login,
 .btn-signup {
+    font-size: medium;
     padding: 7px 18px;
     border-radius: 5px;
     border: 1.5px solid #2b579a;
     background: #fff;
     color: #2b579a;
-    font-weight: 500;
     cursor: pointer;
     transition: background 0.2s, color 0.2s;
+    text-decoration: none;
 }
 
 .btn-login:hover,
 .btn-signup:hover {
     background: #2b579a;
     color: #fff;
+    text-decoration: white;
 }
 
 /* Posts List */
@@ -137,6 +140,8 @@ body {
     border-radius: 50%;
     background: #bdbdbd;
 }
+
+
 
 @media screen and (max-width: 768px) {
     .header {
