--- a/kodely/core/static/css/ver_post.css
+++ b/kodely/core/static/css/ver_post.css
@@ -95,6 +95,30 @@ pre {
     background: #bdbdbd;
 }
 
+.btn-home {
+    padding: 7px 18px;
+    border-radius: 5px;
+    background: #2b579a;
+    color: #ffffff;
+    font-weight: 500;
+    cursor: pointer;
+    transition: background 0.2s, color 0.2s;
+    text-decoration: none;
+
+}
+
+.btn-home:hover {
+    background: #1b3b6c;
+    color: #fff;
+}
+
+.encabezado {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 18px;
+}
+
 /* ================== Responsive ================== */
 @media screen and (max-width: 768px) {
     body {
